# selective-llm-product-integration

./: .env.example  .gitignore  AGENT.md  CITATION.cff  CONTRIBUTING.md  Makefile  Mosaic_PRD.md  Mosaic_Roadmap.md  Project_Blueprint_Mosaic.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: python.yml
apps/api/: README.md
apps/web/: README.md  astro.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/worker/: README.md
artifacts/: README.md
configs/: README.md
configs/datasets/: README.md  alaska_candidates.json  fixture_dataset.json  selected_dataset.json
configs/experiments/: README.md  m3_live_smoke_example.json  m3_llm_assisted_example.json  m4_b_all_alaska_monitor.json  m4_b_fusion_only_alaska_monitor.json  m4_b_linkage_fusion_alaska_monitor.json  (+9 more)
data/: README.md
database/: README.md
docs/: risk_register.md
prompts/: README.md
reports/: README.md  alaska_camera_full_profiling_summary.md  alaska_monitor_full_profiling_summary.md  alaska_monitor_live_subset_60_profiling_summary.md  alaska_monitor_m1_profiling_summary.md  alaska_notebook_full_profiling_summary.md  dataset_candidate_report.md  fixture_m1_products_profiling_summary.md  m2_baseline_summary.md  report.md  report.tex
scripts/: README.md
tests/: test_cli.py  test_llm_primary_pipeline.py  test_m1_foundation.py  test_m2_baseline.py  test_m3_llm_assisted.py  test_m4_release.py  test_m4_subset_checkpoint.py  test_scaffold.py
tests/golden/: README.md
(+92 files in other folders)
