[project]
name = "mosaic-research"
version = "0.0.0"
description = "Selective LLM-assisted product data integration research scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "polars>=1.41.2",
  "pyarrow>=24.0.0",
  "pydantic>=2.13.4",
  "rich>=15.0.0",
  "typer>=0.12.5",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mosaic = "mosaic.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "ruff>=0.7.4",
]

[tool.setuptools.packages.find]
where = ["packages/integration-core/src"]

[tool.setuptools.package-data]
mosaic = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mosaic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
